Improve PR based on the comments

--- a/app/views/payment/_payment.slim
+++ b/app/views/payment/_payment.slim
@@ -1,3 +1,3 @@
 tr
-  td == number_to_currency(@payment.value, locale: "de", unit: "€")
+  td == number_to_currency(@payment.value, locale: "de")
   td == @payment.created_at.strftime("%d.%m.%Y")
