--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -17,4 +17,4 @@ main
         th
           | Actions
     tbody
-      == render @purchases, cached: true
+      == render @purchases, cache: true
