Add a helper to display HMT relationships

--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -23,14 +23,14 @@ main
     tbody
       tr
         td == @product.id
-        td == @product.supplier.title
+        td == format_relation(@product.suppliers, "title")
         td == @product.franchise.title
         td == @product.title
-        td == @product.size&.value || "-"
+        td == format_relation(@product.sizes, "value")
         td == @product.shape.title
-        td == @product.brand.title
-        td == @product.version&.value || "-"
-        td == @product.color&.value || "-"
+        td == format_relation(@product.brands, "title")
+        td == format_relation(@product.versions, "value")
+        td == format_relation(@product.colors, "value")
         td == @product.created_at
         td == @product.updated_at
 
