--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,6 +1,6 @@
 tr id="#{dom_id product}"
   td
-    == product.id
+    == product.woo_id
   td
     == product.full_title
   - if action_name != "show" 
