--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -3,11 +3,12 @@
 == render "_shared/nav-index", model: @products
 
 main
+  == paginate @products
   table(role="grid")
     thead
       tr
         th
-          | ID
+          | Shop ID
         th
           | Full name
         th
