--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,7 @@ html
           li
             == link_to "Dashboard", root_path
           li
-            == link_to "Sales", "#sales_path"
+            == link_to "Sales", sales_path
           li
             == link_to "Purchases", purchases_path
           li
