--- a/app/views/colors/_color.html.slim
+++ b/app/views/colors/_color.html.slim
@@ -8,7 +8,7 @@ tr id="#{dom_id color}"
   td
     == color.updated_at
   - if action_name != "show" 
-    td
+    td.actions
       == link_to color
         i.icn 📄
         | Show
