--- a/app/views/versions/_version.html.slim
+++ b/app/views/versions/_version.html.slim
@@ -8,7 +8,7 @@ tr id="#{dom_id version}"
   td
     == version.updated_at
   - if action_name != "show" 
-    td
+    td.actions
       == link_to version
         i.icn 📄
         | Show
