--- a/app/views/brands/_brand.html.slim
+++ b/app/views/brands/_brand.html.slim
@@ -8,7 +8,7 @@ tr id="#{dom_id brand}"
   td
     == brand.updated_at
   - if action_name != "show" 
-    td
+    td.actions
       == link_to brand
         i.icn 📄
         | Show
