--- a/app/views/franchises/_franchise.html.slim
+++ b/app/views/franchises/_franchise.html.slim
@@ -8,7 +8,7 @@ tr id="#{dom_id franchise}"
   td
     == franchise.updated_at
   - if action_name != "show" 
-    td
+    td.actions
       == link_to franchise
         i.icn 📄
         | Show
