--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,13 +1,17 @@
-tr id="#{dom_id product}"
+tr.hoverable id="#{dom_id product}"
   td
-    == product.woo_id
+    = product.woo_id
   td
-    == product.full_title
+    = link_to product
+      = product.full_title
   - if action_name != "show" 
-    td
-      == link_to product
+    td.actions
+      = link_to product
         i.icn 📄
         | Show
-      == link_to edit_product_path(product)
+      = link_to edit_product_path(product)
         i.icn ✏️
         | Edit
+      = link_to product, data: { "turbo-method": :delete, turbo_confirm: 'Are you sure?' }
+        i.icn 💥
+        | Destroy
