--- a/app/views/shapes/_shape.html.slim
+++ b/app/views/shapes/_shape.html.slim
@@ -8,7 +8,7 @@ tr id="#{dom_id shape}"
   td
     == shape.updated_at
   - if action_name != "show" 
-    td
+    td.actions
       == link_to shape
         i.icn 📄
         | Show
