--- a/app/views/sizes/_size.html.slim
+++ b/app/views/sizes/_size.html.slim
@@ -8,7 +8,7 @@ tr id="#{dom_id size}"
   td
     == size.updated_at
   - if action_name != "show" 
-    td
+    td.actions
       == link_to size
         i.icn 📄
         | Show
