--- a/app/views/suppliers/_supplier.html.slim
+++ b/app/views/suppliers/_supplier.html.slim
@@ -8,7 +8,7 @@ tr id="#{dom_id supplier}"
   td
     == supplier.updated_at
   - if action_name != "show" 
-    td
+    td.actions
       == link_to supplier
         i.icn 📄
         | Show
