Add an ability to create new Sales and edit existing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -254,6 +254,47 @@ form.payment input[type="submit"] {
 progress.no-mg {
   margin: 0;
 }
+.radio-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5em;
+}
+.radio-buttons input,
+.radio-buttons label {
+  margin: 0;
+}
+.radio-btn {
+  cursor: pointer;
+  padding: 0.5em;
+  gap: 0.5em;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  border: 1px solid var(--muted-border-color);
+  border-radius: var(--border-radius);
+}
+.radio-btn:hover {
+  border: 1px solid var(--primary-focus);
+  background-color: var(--primary-focus);
+}
+.radio-btn--label {
+  margin: 0;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+.sale_product {
+  margin: 1.5rem 0;
+}
+a {
+  height: 100%;
+}
+button.is-inverted {
+  --background-color: var(--background-color);
+  --color: var(--primary);
+}
+button.is-inverted:hover {
+  --background-color: var(--primary-focus);
+}
 
 /* 
   PAGINATION start
