--- a/app/views/brands/edit.html.slim
+++ b/app/views/brands/edit.html.slim
@@ -1,4 +1,4 @@
-== render "_shared/nav-edit", model: @brand
+= render "_shared/nav-edit", model: @brand
 
 main
-  == render "form", brand: @brand
+  = render "form", brand: @brand
