--- a/app/views/brands/new.html.slim
+++ b/app/views/brands/new.html.slim
@@ -1,5 +1,5 @@
-== link_to "Back to brands", brands_path
+= link_to "Back to brands", brands_path
 h1 New brand
 
 main
-  == render "form", brand: @brand
+  = render "form", brand: @brand
