--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -1,28 +1,28 @@
-== form_with(model: product) do |form|
-  == render "_shared/notice-err", model: product
+= form_with(model: product) do |form|
+  = render "_shared/notice-err", model: product
 
-  == form.label :supplier
-  == form.collection_select(:supplier_ids, Supplier.all, :id, :title, { class: "select", include_blank: true }, {multiple: true, data: { controller: "slim-multi-select" }})
+  = form.label :supplier
+  = form.collection_select(:supplier_ids, Supplier.all, :id, :title, { class: "select", include_blank: true }, {multiple: true, data: { controller: "slim-multi-select" }})
 
-  == form.label :franchise
-  == form.collection_select(:franchise_id, Franchise.all, :id, :title, { class: "select" }, data: { controller: "slim-select" })
+  = form.label :franchise
+  = form.collection_select(:franchise_id, Franchise.all, :id, :title, { class: "select" }, data: { controller: "slim-select" })
 
-  == form.label :title
-  == form.text_field :title
+  = form.label :title
+  = form.text_field :title
 
-  == form.label :size
-  == form.collection_select(:size_ids, Size.all, :id, :value, { class: "select" }, {multiple: true, data: { controller: "slim-multi-select" }})   
+  = form.label :size
+  = form.collection_select(:size_ids, Size.all, :id, :value, { class: "select" }, {multiple: true, data: { controller: "slim-multi-select" }})   
 
-  == form.label :shape
-  == form.collection_select(:shape_id, Shape.all, :id, :title)
+  = form.label :shape
+  = form.collection_select(:shape_id, Shape.all, :id, :title)
 
-  == form.label :brand
-  == form.collection_select(:brand_ids, Brand.all, :id, :title, { class: "select" }, {multiple: true, data: { controller: "slim-multi-select" }})
+  = form.label :brand
+  = form.collection_select(:brand_ids, Brand.all, :id, :title, { class: "select" }, {multiple: true, data: { controller: "slim-multi-select" }})
 
-  == form.label :version
-  == form.collection_select(:version_ids, Version.all, :id, :value, { class: "select" }, {multiple: true, data: { controller: "slim-multi-select" }})
+  = form.label :version
+  = form.collection_select(:version_ids, Version.all, :id, :value, { class: "select" }, {multiple: true, data: { controller: "slim-multi-select" }})
 
-  == form.label :color
-  == form.collection_select(:color_ids, Color.all, :id, :value, { class: "select" }, {multiple: true, data: { controller: "slim-multi-select", show_search: false} })  
+  = form.label :color
+  = form.collection_select(:color_ids, Color.all, :id, :value, { class: "select" }, {multiple: true, data: { controller: "slim-multi-select", show_search: false} })  
 
-  == form.submit
+  = form.submit
