--- a/app/views/purchases/new.html.slim
+++ b/app/views/purchases/new.html.slim
@@ -1,4 +1,4 @@
-== link_to "Back to purchases", purchases_path
+= link_to "Back to purchases", purchases_path
 h1 New purchase
 main
-  == render "form", purchase: @purchase
+  = render "form", purchase: @purchase
