--- a/app/views/sales/new.html.slim
+++ b/app/views/sales/new.html.slim
@@ -1,4 +1,4 @@
-== link_to "Back to sales", sales_path
+= link_to "Back to sales", sales_path
 h1 New sale
 main
-  == render "form", sale: @sale
+  = render "form", sale: @sale
