--- a/app/views/sizes/show.html.slim
+++ b/app/views/sizes/show.html.slim
@@ -1,6 +1,6 @@
-== render "_shared/notice"
+= render "_shared/notice"
 
-== render "_shared/nav-show", model: @size
+= render "_shared/nav-show", model: @size
 
 main
   table.vertical(role="grid")
@@ -15,6 +15,6 @@ main
         th
           | Updated
     tbody
-      == render @size
+      = render @size
 
-== button_to "Destroy this size", size_path(@size), method: :delete, class: "btn-danger"
+= button_to "Destroy this size", size_path(@size), method: :delete, class: "btn-danger"
