--- a/app/views/colors/index.html.slim
+++ b/app/views/colors/index.html.slim
@@ -1,6 +1,6 @@
-== render "_shared/notice"
+= render "_shared/notice"
 
-== render "_shared/nav-index", model: @colors
+= render "_shared/nav-index", model: @colors
 
 main
   table(role="grid")
@@ -17,4 +17,4 @@ main
         th
           | Actions
     tbody
-      == render @colors
+      = render @colors
