--- a/app/views/franchises/edit.html.slim
+++ b/app/views/franchises/edit.html.slim
@@ -1,4 +1,4 @@
-== render "_shared/nav-edit", model: @franchise
+= render "_shared/nav-edit", model: @franchise
 
 main
-  == render "form", franchise: @franchise
+  = render "form", franchise: @franchise
