--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,12 +3,12 @@ html
   head
     title StoreManagerV2
     meta[name="viewport" content="width=device-width,initial-scale=1"]
-    == csrf_meta_tags
-    == csp_meta_tag
-    == stylesheet_link_tag "application", href = "https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css", "data-turbo-track": "reload"
-    == stylesheet_link_tag "application", href = "https://unpkg.com/slim-select@latest/dist/slimselect.css", "data-turbo-track": "reload"
-    == stylesheet_link_tag "application", "data-turbo-track": "reload"
-    == javascript_importmap_tags
+    = csrf_meta_tags
+    = csp_meta_tag
+    = stylesheet_link_tag "application", href = "https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css", "data-turbo-track": "reload"
+    = stylesheet_link_tag "application", href = "https://unpkg.com/slim-select@latest/dist/slimselect.css", "data-turbo-track": "reload"
+    = stylesheet_link_tag "application", "data-turbo-track": "reload"
+    = javascript_importmap_tags
   body
     header
       nav
@@ -17,26 +17,26 @@ html
           i.icn.logo 😸
         ul
           li
-            == link_to "Dashboard", root_path
+            = link_to "Dashboard", root_path
           li
-            == link_to "Sales", sales_path
+            = link_to "Sales", sales_path
           li
-            == link_to "Purchases", purchases_path
+            = link_to "Purchases", purchases_path
           li
-            == link_to "Products", products_path
+            = link_to "Products", products_path
           li
-            == link_to "Suppliers", suppliers_path
+            = link_to "Suppliers", suppliers_path
           li
-            == link_to "Brands", brands_path
+            = link_to "Brands", brands_path
           li
-            == link_to "Franchises", franchises_path
+            = link_to "Franchises", franchises_path
           li
-            == link_to "Colors", colors_path
+            = link_to "Colors", colors_path
           li
-            == link_to "Shapes", shapes_path
+            = link_to "Shapes", shapes_path
           li
-            == link_to "Sizes", sizes_path
+            = link_to "Sizes", sizes_path
           li
-            == link_to "Versions", versions_path
+            = link_to "Versions", versions_path
     main
-      == yield
+      = yield
