--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,9 +1,9 @@
-== render "_shared/notice"
+= render "_shared/notice"
 
-== render "_shared/nav-show", model: @product, custom_heading: true
+= render "_shared/nav-show", model: @product, custom_heading: true
   hgroup 
-    h1 == @product.title
-    h2 == @product.full_title
+    h1 = @product.title
+    h2 = @product.full_title
 
 main
   table.vertical(role="grid")
@@ -23,17 +23,17 @@ main
         th Updated
     tbody
       tr
-        td == @product.id
-        td == @product.woo_id
-        td == format_relation(@product.suppliers, "title")
-        td == @product.franchise.title
-        td == @product.title
-        td == format_relation(@product.sizes, "value")
-        td == @product.shape.title
-        td == format_relation(@product.brands, "title")
-        td == format_relation(@product.versions, "value")
-        td == format_relation(@product.colors, "value")
-        td == @product.created_at
-        td == @product.updated_at
+        td = @product.id
+        td = @product.woo_id
+        td = format_relation(@product.suppliers, "title")
+        td = @product.franchise.title
+        td = @product.title
+        td = format_relation(@product.sizes, "value")
+        td = @product.shape.title
+        td = format_relation(@product.brands, "title")
+        td = format_relation(@product.versions, "value")
+        td = format_relation(@product.colors, "value")
+        td = @product.created_at
+        td = @product.updated_at
 
-== button_to "Destroy this product", product_path(@product), method: :delete, class: "btn-danger", data: { turbo_confirm: 'Are you sure?' }
+= button_to "Destroy this product", product_path(@product), method: :delete, class: "btn-danger", data: { turbo_confirm: 'Are you sure?' }
