--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -1,24 +1,24 @@
-== form_with(model: purchase) do |form|
-  == render "_shared/notice-err", model: purchase
+= form_with(model: purchase) do |form|
+  = render "_shared/notice-err", model: purchase
 
-  == form.label :supplier
-  == form.collection_select(:supplier_id, Supplier.all, :id, :title)
+  = form.label :supplier
+  = form.collection_select(:supplier_id, Supplier.all, :id, :title)
 
-  == form.label :product
-  == form.collection_select(:product_id, Product.all, :id, :full_title, { class: "select" }, data: { controller: "slim-select" })
+  = form.label :product
+  = form.collection_select(:product_id, Product.all, :id, :full_title, { class: "select" }, data: { controller: "slim-select" })
 
-  == form.label :order_reference
-  == form.text_field :order_reference
+  = form.label :order_reference
+  = form.text_field :order_reference
 
-  == form.label :item_price
-  == form.text_field :item_price
+  = form.label :item_price
+  = form.text_field :item_price
 
-  == form.label :amount
-  == form.text_field :amount
+  = form.label :amount
+  = form.text_field :amount
 
-  - if action_name == "new"
-    == form.fields_for :payments do |payment_builder|
-      == payment_builder.label "What did you pay in total?"
-      == payment_builder.number_field :value
+  - if action_name = "new"
+    = form.fields_for :payments do |payment_builder|
+      = payment_builder.label "What did you pay in total?"
+      = payment_builder.number_field :value
 
-  == form.submit
+  = form.submit
