--- a/app/views/shapes/edit.html.slim
+++ b/app/views/shapes/edit.html.slim
@@ -1,4 +1,4 @@
-== render "_shared/nav-edit", model: @shape
+= render "_shared/nav-edit", model: @shape
 
 main
-  == render "form", shape: @shape
+  = render "form", shape: @shape
