--- a/app/views/shapes/index.html.slim
+++ b/app/views/shapes/index.html.slim
@@ -1,6 +1,6 @@
-== render "_shared/notice"
+= render "_shared/notice"
 
-== render "_shared/nav-index", model: @shapes
+= render "_shared/nav-index", model: @shapes
 
 main
   table(role="grid")
@@ -17,4 +17,4 @@ main
         th
           | Actions
     tbody
-      == render @shapes
+      = render @shapes
