--- a/app/views/sizes/index.html.slim
+++ b/app/views/sizes/index.html.slim
@@ -1,6 +1,6 @@
-== render "_shared/notice"
+= render "_shared/notice"
 
-== render "_shared/nav-index", model: @sizes
+= render "_shared/nav-index", model: @sizes
 
 main
   table(role="grid")
@@ -17,4 +17,4 @@ main
         th
           | Actions
     tbody
-      == render @sizes
+      = render @sizes
