--- a/app/views/suppliers/new.html.slim
+++ b/app/views/suppliers/new.html.slim
@@ -1,4 +1,4 @@
-== link_to "Back to suppliers", suppliers_path
+= link_to "Back to suppliers", suppliers_path
 h1 New supplier
 main
-  == render "form", supplier: @supplier
+  = render "form", supplier: @supplier
