--- a/app/views/versions/show.html.slim
+++ b/app/views/versions/show.html.slim
@@ -1,6 +1,6 @@
-== render "_shared/notice"
+= render "_shared/notice"
 
-== render "_shared/nav-show", model: @version
+= render "_shared/nav-show", model: @version
 
 main
   table(role="grid")
@@ -15,6 +15,6 @@ main
         th
           | Updated
     tbody
-      == render @version
+      = render @version
 
-== button_to "Destroy this version", version_path(@version), method: :delete, class: "btn-danger"
+= button_to "Destroy this version", version_path(@version), method: :delete, class: "btn-danger"
