Fix syncing errors for sales

--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -8,7 +8,7 @@ main
     thead
       tr
         th Woo ID
-        th Product
+        th Customer
         th Status
         th Price
         th Actions
