--- a/app/views/sales/_form.html.slim
+++ b/app/views/sales/_form.html.slim
@@ -4,7 +4,7 @@
   article
     h4 Status
     .radio-buttons
-      = f.collection_radio_buttons(:status, Sale.STATUSES, :itself, :itself) do |rdb|
+      = f.collection_radio_buttons(:status, Sale.STATUS, :itself, :itself) do |rdb|
         = rdb.label(class: "radio-btn")
           = rdb.label class: "radio-btn--label"
           = rdb.radio_button
