--- a/app/views/sales/_sale.html.slim
+++ b/app/views/sales/_sale.html.slim
@@ -1,9 +1,6 @@
 tr id="#{dom_id sale}"
   td = sale.woo_id
-  td
-    ol
-      - sale.products.each do |product|
-        li = product.full_title
+  td = sale.customer.email
   td = sale.status.titleize
   td = number_to_currency(sale.total, locale: "de")
   - if action_name != "show" 
